--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,17 @@
 .navlist li {
   margin: 15px;
 }
+
+.project-flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin: 0 auto;
+  width: 80%;
+}
+
+.btn {
+  background-color: #4CAF50;
+  margin: 5px;  
+}
